# hello-world

./: CMakeLists.txt  SEAMOREConfig.h.in  build.sh  main.cpp  readme.md  run.sh
